fix: search services headers aligned

--- a/frontend/frontend/src/components/Services/components/SearchServices.css
+++ b/frontend/frontend/src/components/Services/components/SearchServices.css
@@ -46,11 +46,11 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     line-height: 1.5;
     text-align: left;
     align-items: center;
-    /* border: 1px solid white; */
+
 }
 
 .card.negotiation {
@@ -90,6 +90,8 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
         
+        
+        
 
     }
 
@@ -100,6 +102,8 @@
     .card {
         padding: min(3vh, 3rem) min(3vw, 3rem);
         height: 40vh;
+        
+        
     }
 
 
